--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "tutorial2-app",
+  "name": "demo-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.26",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "aws-amplify": "^4.3.8",
+    "aws-amplify": "^4.3.10",
+    "components": "^0.1.0",
     "react": "^17.0.2",
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
+    "react-faq-component": "^1.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3",
+    "react-select": "^5.2.1",
+    "react-simple-chatbot": "^0.6.1",
+    "react-table": "^7.7.0",
+    "styled": "^1.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
