--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
+    "react-simple-chatbot": "^0.6.1",
+    "react-table": "^7.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
