--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
-    "react-simple-chatbot": "^0.6.1",
+    "react-simple-chatbot": "^0.5.0",
     "react-table": "^7.7.0",
     "web-vitals": "^1.1.2"
   },
