--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.32.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
